Create Sketch of SmasherClient and network tests
- It now sends objects through sockets
- Executes objects remotely

NEXT: Going to work on returning the object back

--- a/SmasherConsole/SmasherConsole.csproj
+++ b/SmasherConsole/SmasherConsole.csproj
@@ -58,5 +58,9 @@
       <Project>{F03CBCB8-05B4-44D0-ABB6-BE204E3B4D10}</Project>
       <Name>JobProcessor</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SmasherLibraries\Smasher\Smasher.csproj">
+      <Project>{EDCCEAE9-CC92-4D70-9624-B6E4949CD1F1}</Project>
+      <Name>Smasher</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
