--- a/SmasherLibraries/SmasherLib/SmasherLib.csproj
+++ b/SmasherLibraries/SmasherLib/SmasherLib.csproj
@@ -35,6 +35,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="LocalJobConsumer.cs" />
     <Compile Include="SleepJob.cs" />
+    <Compile Include="NetworkJobListener.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
