--- a/SmasherLibraries/SmasherLib/SmasherLib.csproj
+++ b/SmasherLibraries/SmasherLib/SmasherLib.csproj
@@ -39,6 +39,7 @@
     <Compile Include="LocalJobConsumer.cs" />
     <Compile Include="SleepJob.cs" />
     <Compile Include="NetworkJobListener.cs" />
+    <Compile Include="RemoteJobConsumer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
