Created Server API C# wrapper #gklst
- Refactored Listener's code to use the API
- Simplified the way to do http requests

--- a/SmasherLibraries/SmasherLib/SmasherLib.csproj
+++ b/SmasherLibraries/SmasherLib/SmasherLib.csproj
@@ -40,6 +40,7 @@
     <Compile Include="SleepJob.cs" />
     <Compile Include="NetworkJobListener.cs" />
     <Compile Include="RemoteJobConsumer.cs" />
+    <Compile Include="ServerApi.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
