--- a/SmasherLibraries/JobLib/JobLib.csproj
+++ b/SmasherLibraries/JobLib/JobLib.csproj
@@ -9,6 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Smasher.JobLib</RootNamespace>
     <AssemblyName>JobLib</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
