--- a/SmasherLibraries/SmasherServerAPI/SmasherServerAPI.csproj
+++ b/SmasherLibraries/SmasherServerAPI/SmasherServerAPI.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{344438B8-6988-4BE6-8A1A-86BCD0F5619D}</ProjectGuid>
+    <ProjectGuid>{E8CFCB27-4AE5-45A3-A096-6F5A4EE1F5A9}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Smasher.SmasherLib</RootNamespace>
-    <AssemblyName>SmasherLib</AssemblyName>
+    <RootNamespace>Smasher.Api</RootNamespace>
+    <AssemblyName>SmasherServerAPI</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -31,24 +31,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\libs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="LocalJobConsumer.cs" />
-    <Compile Include="SleepJob.cs" />
-    <Compile Include="NetworkJobListener.cs" />
-    <Compile Include="RemoteJobConsumer.cs" />
-    <Compile Include="SmasherAddressUtil.cs" />
+    <Compile Include="ServerApi.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <ProjectReference Include="..\JobLib\JobLib.csproj">
-      <Project>{0C1B99C3-CEA3-4BE7-A448-60758D3C3801}</Project>
-      <Name>JobLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SmasherServerAPI\SmasherServerAPI.csproj">
-      <Project>{E8CFCB27-4AE5-45A3-A096-6F5A4EE1F5A9}</Project>
-      <Name>SmasherServerAPI</Name>
-    </ProjectReference>
-  </ItemGroup>
 </Project>
